updated some translation key names

--- a/assets/styles/themes/pink.css
+++ b/assets/styles/themes/pink.css
@@ -7,7 +7,7 @@
     --input-accent-color: #f4a8cc;
     --input-alt-color: #fff5fa;
     --input-highlight-color: #7ee988;
-    --input-highlight-color-2: #00ccff;
+    --input-highlight-color-2: #7be5ff;
     --input-highlight-color-3: #ff4343;
     --input-highlight-text-color: #ffffff;
 }
